--- a/bower.json
+++ b/bower.json
@@ -20,6 +20,7 @@
   ],
   "dependencies": {
     "ado-save-config-btn": "^1.0.3",
-    "ado-ng-macaddress-filter": "^1.0.1"
+    "ado-ng-macaddress-filter": "^1.0.1",
+    "ado-ng-seconds-format": "^0.0.2"
   }
 }
