--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@adopisowifi/ng-wifi-users",
-  "version": "1.1.4",
+  "version": "1.1.5",
   "description": "Angular.js 1.x module for managing AdoPisoWiFi wifi users",
   "main": "./dist/ado-ng-wifi-users.js",
   "scripts": {
@@ -27,6 +27,7 @@
     "gulp-concat": "^2.6.1"
   },
   "dependencies": {
-    "@adopisowifi/ng-macaddress-filter": "^1.0.1"
+    "@adopisowifi/ng-macaddress-filter": "^1.0.1",
+    "@adopisowifi/ng-seconds-format": "0.0.2"
   }
 }
